fixed layout issue with trend indicators

--- a/directives/styles/stat-summary.scss
+++ b/directives/styles/stat-summary.scss
@@ -151,6 +151,7 @@
     
     .statrow {
         padding: 1px 5px 5px 5px;
+        overflow: hidden;
     }
     
     span.label {
